# api_proxy_gateway

./: .env.example  Cargo.toml  Makefile  config.json  config.toml  docker-compose.yml  run_tests.sh  test_upstream.py
admin/: lefthook.yml  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
admin/src/: global-config.ts
admin/src/__tests__/: apiClient.interceptors.spec.ts  authHeaders.spec.ts
admin/src/_mock/: assets_backup.ts  index.ts
admin/src/_mock/handlers/: _api_keys.ts  _user.ts
admin/src/api/: apiClient.ts  authHeaders.ts
admin/src/api/services/: apiKeyService.ts  proxyApis.ts  userService.ts
admin/src/components/upload/: upload-avatar.tsx  upload-box.tsx  upload.tsx
admin/src/layouts/components/: account-dropdown.tsx
admin/src/layouts/dashboard/nav/nav-data/: nav-data-frontend.tsx
admin/src/pages/api-keys/: index.tsx
admin/src/pages/proxy-apis/: index.tsx
admin/src/pages/sys/login/: index.tsx  login-form.tsx  register-form.tsx
admin/src/routes/sections/: main.tsx
admin/src/routes/sections/dashboard/: frontend.tsx
bins/: gateway.rs  server.rs
bins/proxy/: Cargo.toml
bins/proxy/src/: circuit_breaker.rs  config.rs  main.rs  retry.rs
bins/proxy/tests/: round_robin.rs
bins/server/: Cargo.toml
bins/server/src/: admin.rs  main.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: admin_http.rs  env.rs  lib.rs  pagination.rs
crates/common/src/types/: mod.rs
crates/common/src/utils/: logging.rs
crates/configs/: Cargo.toml
crates/configs/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: bootstrap.rs  lib.rs  observability.rs  proxy.rs  rate_limiter.rs
crates/gateway/tests/: lb_health.rs
crates/migration/: README.md
crates/migration/src/: lib.rs  m20220101_000002_add_indexes.rs  m20220101_000011_create_tenant.rs  m20220101_000012_create_user.rs  m20220101_000013_create_apikey.rs  m20220101_000014_create_upstream.rs  m20220101_000015_create_ratelimit.rs  m20220101_000016_create_route.rs  m20220101_000017_create_request_log.rs  m20220101_000018_create_user_credentials.rs  m20220101_000019_create_proxy_api.rs
crates/models/: Cargo.toml  README.md
crates/models/src/: apikey.rs  db.rs  errors.rs  lib.rs  proxy_api.rs  ratelimit.rs  request_log.rs  route.rs  tenant.rs  upstream.rs  user.rs  user_credentials.rs
crates/models/src/tests/: crud_tests.rs  db_tests.rs  mod.rs  performance_tests.rs  proxy_api_tests.rs  transaction_tests.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  apis.rs  auth.rs  errors.rs  lib.rs  openapi.rs  proxy_apis.rs  routes.rs  startup.rs
crates/server/src/routes/: admin.rs  apis.rs  auth.rs  proxy_apis.rs
crates/server/tests/: auth_flow.rs  e2e.rs
crates/service/: CHANGELOG.md  Cargo.toml  README.md
crates/service/benches/: auth_bench.rs
crates/service/src/: admin_http.rs  apikey_service.rs  errors.rs  lib.rs  pagination.rs  proxy_api_service.rs  ratelimit_service.rs  request_log_service.rs  route_service.rs  runtime.rs  tenant_service.rs  test_support.rs  upstream_service.rs  user_service.rs
crates/service/src/admin/: api_mgmt_store.rs  kv_store.rs  mod.rs
crates/service/src/auth/: domain.rs  errors.rs  mod.rs  repository.rs  service.rs
crates/service/src/auth/repo/: mod.rs  seaorm.rs
crates/service/src/db/: mod.rs  route_service.rs  tenant_service.rs  user_service.rs
crates/service/src/file/: admin_kv_store.rs  api_management.rs  mod.rs
crates/service/src/proxy_api/: repository.rs  service.rs
crates/service/src/services/: admin_kv_store.rs  api_management.rs  mod.rs  ratelimit_service.rs  request_log_service.rs  upstream_service.rs
crates/service/src/storage/: json_map_store.rs  mod.rs
crates/utils/: Cargo.toml
data/: api_keys.json
docs/: architecture.md  code_structure.md  data_structure.md  engineering.md  mvp_checklist.md  mvp_plan.md  mvp_setup.md  perf_benchmark.md  prompts.md  tasks.md
frontend/: admin.html  app.js  index.html  styles.css
