[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/utils",
    "crates/migration",
    "bins/proxy",
    "bins/server", "crates/models",
    
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
moka = { version = "0.12", features = ["future"] }
arc-swap = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prometheus = "0.13"
sea-orm = { version = "1", default-features = false, features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres", "with-chrono", "with-uuid"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
pingora = { git = "https://github.com/cloudflare/pingora" }
pingora-core = { git = "https://github.com/cloudflare/pingora" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora" }
pingora-load-balancing = { git = "https://github.com/cloudflare/pingora" }
pingora-http = { git = "https://github.com/cloudflare/pingora" }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
