[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
core = { path = "../../crates/core" }
configs = { path = "../../crates/configs" }

[[bin]]
name = "server"
path = "src/main.rs"