[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
prometheus = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pingora = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }



[lib]
name = "common"
path = "src/lib.rs"

[features]
default = []
pingora = ["dep:pingora"]
