[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
env_logger = { workspace = true }
common = { path = "../../crates/common" }
service = { path = "../../crates/service" }
log = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-http = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
