[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }
configs = { path = "../configs" }
service = { path = "../service", features = ["seaorm"] }
axum-gate = "1.0.0"
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["cookie"] }
models = { path = "../models" }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
migration = { path = "../migration" }
