[package]
name = "service"
version = "0.1.0"
edition = "2021"


[dependencies]
models = { path = "../models" }
common = { path = "../common" }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
argon2 = { version = "0.5" }
rand = { version = "0.8" }
jsonwebtoken = { version = "9" }

[dev-dependencies]
migration = { path = "../migration" }
tokio = { workspace = true }
tokio-test = { version = "0.4" }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
seaorm = []
